RANGER-4076: Support Java 17 for build and runtime